test/Fail/TelescopePatternEta.err
TelescopePatternEta.agda:9.11-35: error: [ShouldBeEtaRecordPattern]
Pattern matching in binders is only allowed for record types with
eta-equality, but this constructor belongs to a record type without
eta-equality
when checking the parameters of module _
